--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "czg": "^1.3.12",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-plugin-windicss": "^1.8.8",
+    "windicss": "^3.5.6"
   }
 }
