--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
+    "@mdx-js/mdx": "^2.1.5",
+    "@mdx-js/react": "^2.1.5",
+    "@mdx-js/rollup": "^2.1.5",
+    "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "czg": "^1.3.12",
+    "rollup": "^2.79.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
+    "vite-plugin-react-views": "^1.0.0",
     "vite-plugin-windicss": "^1.8.8",
     "windicss": "^3.5.6"
   }
