feat(Comps): :sparkles: move components into seperate folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
+    "paths": {
+      "@comps/*": ["./src/components/*"],
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
