--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "highlight.js": "^11.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@mdx-js/mdx": "^2.1.5",
@@ -22,12 +25,13 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
     "czg": "^1.3.12",
+    "postcss": "^8.4.19",
     "rollup": "^2.79.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
-    "vite-plugin-react-views": "^1.0.0",
-    "vite-plugin-windicss": "^1.8.8",
-    "windicss": "^3.5.6"
+    "vite-plugin-react-views": "^1.0.0"
   }
 }
