--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "highlight.js": "^11.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "redux": "^4.2.0"
@@ -21,16 +22,23 @@
     "@mdx-js/mdx": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@mdx-js/rollup": "^2.1.5",
+    "@types/express": "^4.17.14",
+    "@types/mdx": "^2.0.3",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "czg": "^1.3.12",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "postcss": "^8.4.19",
+    "remark-frontmatter": "^4.0.1",
+    "remark-mdx-frontmatter": "^2.1.1",
     "rollup": "^2.79.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.6.4",
+    "ts-node": "^10.9.1",
+    "typescript": "~4.9.3",
     "vite": "^3.2.3",
     "vite-plugin-react-views": "^1.0.0"
   }
